--- a/weapon.html
+++ b/weapon.html
@@ -1,2 +1,153 @@
-﻿<html><head><title>武器伤害计算</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="keywords" content="Ingress,工具,计算" /><meta name="description" content="Ingress武器伤害计算工具" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="stylesheet" href="weapon.css" /><script type="text/javascript" src="weapon.js"></script></head><body><h1>武器伤害计算</h1><hr /><table><noscript><tr><td colspan="2" style="text-align:center">关了JavaScript还算个卵啊</td></tr></noscript><tr><td>武器:</td><td><select id="w_type" onChange="calc();"><option selected="selected">XMP Burster</option><option>Ultra Strike</option></select></td></tr><tr><td>等级:</td><td><select id="w_lvl" onChange="calc();"><option>L1</option><option>L2</option><option>L3</option><option>L4</option><option>L5</option><option>L6</option><option>L7</option><option selected="selected">L8</option></select></td></tr><tr><td>目标距离:</td><td><input type="tel" id="i_rad" value="120" maxlength="3" style="width: 30%" onClick="calc();" onChange="calc();"/> m</td></tr><tr><td colspan="2">计算结果:</td></tr><tr><td colspan="2"><textarea id="result" style="width:100%; height:6em;" readonly="readonly">输入信息即可自动开始计算！
-Brought to you by: DuckSoft</textarea></td></tr></table><hr /><small>Copyleft DuckSoft under GPL 3.0 License.<br />Free to use, but ABSOLUTELY NO WARRANTY!</small></body></html>
+﻿<html>
+<head>
+<title>武器伤害计算</title>
+<meta http-equiv="content-type" content="utf-8" />
+<meta name="keywords" content="Ingress,工具,计算" />
+<meta name="description" content="Ingress武器伤害计算工具" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<style type="text/css">
+body{
+	background-color: #000000;
+	color: #FFFAEF;
+}
+
+h1{
+	color: #D5D4D4;
+}
+a:link    {color:#0CF;}
+a:visited {color:#0FF;}
+a:hover   {color:#FF3;}
+a:active  {color:#0FF;}
+hr{
+	margin-top: 0.2em;
+	margin-bottom: 0.2em;
+}
+
+table{
+	border: #00F3FF thin solid;
+	width: 20em;
+}
+
+td{
+	border: #4D94AA thin solid;
+	padding: 0px;
+}
+
+tr{
+	border: #4D94AA thin solid;
+	padding: 0px;
+}
+
+textarea{
+	background-color: #000000;
+	color: #00CCFF;
+	scrollbar-arrow-color:yellow;
+	scrollbar-base-color:lightsalmon;
+}
+
+small{
+	color: #2CE149;
+}
+</style>
+<script type="text/javascript">
+<!--
+function clr() {
+	document.getElementById("result").innerHTML = "";
+}
+
+function res(para) {
+	document.getElementById("result").innerHTML += para;
+}
+
+function calc() {
+	/** XMP和US的基础伤害 */
+	const listWeaponDamageXM = [150,300,500,900,1200,1500,1800,2700];
+	/** XMP的作战半径 */
+	const listXMPDamageRadius = [42,48,58,72,90,112,140,168];
+	/** US的作战半径 */
+	const listUSDamageRadius = [10,13,16,18,21,24,27,30];
+	
+	var radius = 0;
+	var sType = document.getElementById("w_type").selectedIndex,
+	    sLvl = document.getElementById("w_lvl").selectedIndex,
+		iRad = parseInt(document.getElementById("i_rad").value);
+	
+	clr();
+	
+	switch (sType) {
+		case 0: radius = listXMPDamageRadius[sLvl]; res("XMP Burster L"); break;
+		case 1: radius = listUSDamageRadius[sLvl]; res("Ultra Strike L"); break;
+		default: res("??? L"); break;
+	}
+	
+	res(sLvl + 1);
+	res("\n 理论伤害: " + listWeaponDamageXM[sLvl]);
+	
+	if (radius < iRad) {
+		res("\n 错误: 超出最大射程"+radius+"m。伤害减为0。");
+	} else {
+		var divider = Math.pow(2,5*iRad/radius);
+		res("\n 计算伤害: ");
+		res(Math.floor(listWeaponDamageXM[sLvl]/divider));
+		res(" @ " + iRad + "m");
+	}
+}
+-->
+</script>
+</head>
+<body>
+ <h1>武器伤害计算</h1><a href="index.html">&lt;&lt;&lt;返回目录</a>
+ <hr />
+ <table>
+  <noscript>
+   <tr>
+    <td colspan="2" style="text-align:center">
+     关了JavaScript还算个卵啊
+    </td>
+   </tr>
+  </noscript>
+  
+  <tr>
+   <td>武器:</td>
+   <td>
+    <select id="w_type" onChange="javascript:calc();">
+     <option selected="selected">XMP Burster</option>
+     <option>Ultra Strike</option>
+    </select>
+   </td>
+  </tr>
+  
+  <tr>
+   <td>等级:</td>
+   <td>
+    <select id="w_lvl" onChange="javascript:calc();">
+     <option>L1</option>
+     <option>L2</option>
+     <option>L3</option>
+     <option>L4</option>
+     <option>L5</option>
+     <option>L6</option>
+     <option>L7</option>
+     <option selected="selected">L8</option>
+    </select>
+   </td>
+  </tr>
+  
+  <tr>
+   <td>目标距离:</td>
+   <td><input type="tel" id="i_rad" value="120" maxlength="3" style="width: 30%" onClick="calc();" onChange="javascript:calc();"/> m</td>
+  </tr>
+  
+  <tr>
+   <td colspan="2">计算结果:</td>
+  </tr>
+  <tr>
+   <td colspan="2">
+<textarea id="result" style="width:100%; height:6em;" readonly="readonly">输入信息即可自动开始计算！
+Brought to you by: DuckSoft</textarea></td>
+  </tr>
+ </table>
+ <hr />
+ <small>Copyleft DuckSoft under GPL 3.0 License.<br />Free to use, but ABSOLUTELY NO WARRANTY!</small>
+</body>
+</html>
