--- a/index.html
+++ b/index.html
@@ -5,28 +5,7 @@
 <meta name="keywords" content="Ingress,工具,计算" />
 <meta name="description" content="Ingress武器伤害计算工具" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<style type="text/css">
-body{
-	background-color: #000000;
-	color: #FFFAEF;
-}
-a:link    {color:#0CF;}
-a:visited {color:#0FF;}
-a:hover   {color:#FF3;}
-a:active  {color:#0FF;}
-h1{
-	color: #D5D4D4;
-}
-
-hr{
-	margin-top: 0.2em;
-	margin-bottom: 0.2em;
-}
-
-small{
-	color: #2CE149;
-}
-</style>
+<link rel="stylesheet" href="./static/style.css" />
 </head>
 <body>
  <h1>Ingress小工具集</h1>
