--- a/defence.html
+++ b/defence.html
@@ -5,48 +5,8 @@
 <meta name="keywords" content="Ingress,工具,计算" />
 <meta name="description" content="Ingress Portal防御计算工具" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<style type="text/css">
-body {
-	background-color: #000000;
-	color: #FFFAEF;
-}
-h1 {
-	color: #D5D4D4;
-}
-a:link    {color:#0CF;}
-a:visited {color:#0FF;}
-a:hover   {color:#FF3;}
-a:active  {color:#0FF;}
-hr {
-	margin-top: 0.2em;
-	margin-bottom: 0.2em;
-}
-table {
-	border: #00F3FF thin solid;
-}
-td {
-	border: #4D94AA thin solid;
-	padding: 0px;
-}
-tr {
-	border: #4D94AA thin solid;
-	padding: 0px;
-}
-textarea {
-	background-color: #000000;
-	color: #00CCFF;
-	scrollbar-arrow-color:yellow;
-	scrollbar-base-color:lightsalmon;
-}
-small {
-	color: #2CE149;
-}
-.s1{
-	color: #8CFBBD;
-}
-
-</style>
-<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="./static/style.css" />
+<script type="text/javascript" src="./static/jquery.min.js"></script>
 
 <script type="text/javascript">
 $(function () {
@@ -64,98 +24,28 @@ $(function () {
                     break;
                 case 1:
                     opt.attr("selected", "selected");
-                default:
-                    opt.text("L" + j);
-                    break;
             }
+            opt.text("L" + j);
             opt.appendTo(sel);
         }
             sel.appendTo(td);
             td.appendTo(tr);
-            if (ii[i] == 8 || ii[i] == 4) {
+            if (ii[i] === 8 || ii[i] === 4) {
                 tr.insertAfter($("#res-title"));
                 tr = $("<tr></tr>");
             }
         }
     //TODO: shield autogeneration
     });
-function clr() {
-	document.getElementById("result").innerHTML = "";
-}
-
-function res(para) {
-	document.getElementById("result").innerHTML += para;
-}
-
-function getShieldMitigation(shieldType) {
-	/** Shield为Portal提供的Mitigation */
-	const listShieldMitigation = [0,30,40,60,70];
-	return listShieldMitigation[shieldType];
-}
-
-function getResonatorHealth(resonatorType) {
-	/** Resonator为Portal提供的XM数值 */
-	const listResonatorXM = [0,1000,1500,2000,2500,3000,4000,5000,6000];
-	return listResonatorXM[resonatorType];
-}
-
-function calc() {
-	var dTotal = 0;	//总Mitigation
-	clr();
-	
-	res("-=== Mitigation ===-\n");
-	res("[盾]");
-	
-	var tShield = [0, 0, 0, 0];	//盾的种类
-	var dShield = [0, 0, 0, 0];	//盾的Mitigation
-	
-	for (var _=0; _<4; ++_) {
-		tShield[_] = document.getElementById("s"+(_+1)).selectedIndex;
-		dShield[_] = getShieldMitigation(tShield[_]);
-		res(" " + dShield[_]);
-		dTotal += dShield[_];
-	}
-	res("\n => 共计: "+dTotal);
-	
-	res("\n[Link] ")
-	var nLink = document.getElementById("n_link").value;
-	var dLink = Math.round(400/9*Math.atan(nLink/Math.E));
-	dTotal += dLink;
-	res(dLink);
-	res("\n => 共计: "+dTotal);
-	
-	if (dTotal > 95) {
-		res("\nMitigation超限，已控制为95。");
-		dTotal = 95
-	} else {
-		res("\nMitigation未超限，为"+dTotal);
-	}
-	
-	res("\n-=== Resonator ===-\n");
-	var tResonator = [0,0,0,0,0,0,0,0];
-	var hResonator = [0,0,0,0,0,0,0,0];
-	var hTotal = 0;
-	for (var _=0; _<8; ++_) {
-		tResonator[_] = document.getElementById("r"+(_+1)).selectedIndex;
-		hResonator[_] = getResonatorHealth(tResonator[_]);
-		res (" #"+ (_+1) + ": " + hResonator[_] + " (" + Math.ceil(hResonator[_]*100/(100-dTotal))+ ")\n")
-		hTotal += hResonator[_];
-	}
-	res("共计: "+hTotal+ " ("+ Math.ceil(hTotal*100/(100-dTotal)) +") XM\n------------\n");
-	res("说明：括号内为考虑了Mitigation的XM数值。");
-}
 </script>
 </head>
 <body>
 <h1>Portal 防御计算</h1><a href="index.html">&lt;&lt;&lt;返回目录</a>
+<noscript>
+  <p style="text-align:center"> 关了JavaScript还算个卵啊 </p>
+</noscript>
 <hr />
 <table>
-  <noscript>
-  <tr>
-    <td colspan="4" style="text-align:center"> 关了JavaScript还算个卵啊 </td>
-  </tr>
-  </noscript>
-  
   <tr id="res-title">
     <td colspan="4">Resonator:</td>
   </tr>
