adding missing js reference
Fixed #1

--- a/defence.html
+++ b/defence.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="./static/style.css" />
 <script type="text/javascript" src="./static/jquery.min.js"></script>
-
+<script type="text/javascript" src="./static/defence.js"></script>
 <script type="text/javascript">
 $(function () {
     var tr = $("<tr></tr>");
